--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body > * {
 #timer {
     font-family: monospace;
     display: block;
-    height: 20vh;
+    height: 30vh;
     width: 30vw;
     top: 0;
     left: 0;
@@ -60,6 +60,13 @@ body > * {
     line-height: .8;
     animation: timer-flash 0.75s infinite;
     animation-play-state: paused;
+}
+
+#timer_subtitle {
+    vertical-align: bottom;
+    color: whitesmoke;
+    font-size: 5vh;
+    margin-top: 20vh;
 }
 
 
@@ -92,15 +99,15 @@ header {
     bottom: 0;
     left: 0;
     width: 50vw;
-    height: 80vh;
+    height: 70vh;
     overflow: hidden;
-    background-color: #333;
+    background-color: purple;
     /* You'll need to mess with this a bit to get your camera to work. Replace the url with a live-updating image feed from your camera. Using other camera streaming systems will require some tweaking. */
     /*background-image: url('LINK TO CAMERA SOURCE HERE');*/
 }
 #tuning {
     width: 50vw;
-    height: 80vh;
+    height: 65vh;
     bottom: 0;
     left: 0;
 }
@@ -145,11 +152,24 @@ text {
     font-size: 25px;
     text-anchor: middle;
 }
-#robot-diagram {
+/*#robot-diagram {
     position: absolute;
     bottom: 1px;
     right: 1vw;
+}*/
+
+#autonomous-diagram {
+  position: absolute;
+  right: 5vw;
+  bottom: 15vh;
 }
+
+#auto_buttons {
+  position: absolute;
+  bottom: 5vh;
+  right : 10vw;
+}
+
 #robot-arm {
     -webkit-transform-origin: right;
     -ms-transform-origin: right;
