Added support for displaying a webcam

--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,9 @@ header {
     overflow: hidden;
     background-color: purple;
     /* You'll need to mess with this a bit to get your camera to work. Replace the url with a live-updating image feed from your camera. Using other camera streaming systems will require some tweaking. */
-    /*background-image: url('LINK TO CAMERA SOURCE HERE');*/
+    background-image: url('LINK TO CAMERA SOURCE HERE');
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
 #tuning {
     width: 50vw;
